<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_vertical"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/cntIntCount"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10sp"
			android:layout_weight="15"
			android:textAlignment="textEnd"
			android:textSize="50sp"/>

		<Button
			android:id="@+id/cntBtnClear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/clear"
			android:textSize="20sp"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20sp"
		android:orientation="horizontal">

		<Button
			android:id="@+id/cntBtnPlusOne"
			android:layout_width="wrap_content"
			android:layout_height="150sp"
			android:layout_weight="1"
			android:text="@string/plusOne"
			android:textSize="50sp"/>

		<Button
			android:id="@+id/cntBtnPlusTwo"
			android:layout_width="wrap_content"
			android:layout_height="150sp"
			android:layout_weight="1"
			android:text="@string/plusTwo"
			android:textSize="50sp"/>

		<Button
			android:id="@+id/cntBtnPlusThree"
			android:layout_width="wrap_content"
			android:layout_height="150sp"
			android:layout_weight="1"
			android:text="@string/plusThree"
			android:textSize="50sp"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20sp"
		android:orientation="horizontal">

		<Button
			android:id="@+id/cntBtnPlusFive"
			android:layout_width="wrap_content"
			android:layout_height="150sp"
			android:layout_weight="1"
			android:text="@string/plusFive"
			android:textSize="50sp"/>

		<Button
			android:id="@+id/cntBtnPlusTen"
			android:layout_width="wrap_content"
			android:layout_height="150sp"
			android:layout_weight="1"
			android:text="@string/plusTen"
			android:textSize="50sp"/>
	</LinearLayout>
</LinearLayout>
