<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:columnCount="2"
    tools:context="edu.byui.cit360.calculators.Invest">

    <TextView
        android:id="@+id/invLblPrinc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/invCurPrinc"
        android:text="@string/princ" />

    <EditText
        android:id="@+id/invCurPrinc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/invLblAR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/invDecAR"
        android:text="@string/annRate"
        android:visibility="visible" />

    <EditText
        android:id="@+id/invDecAR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        android:visibility="visible" />

    <TextView
        android:id="@+id/invLblYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/invIntYears"
        android:text="@string/years" />

    <EditText
        android:id="@+id/invIntYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="number"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/invLblPPY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/invIntPPY"
        android:text="@string/ppy" />

    <EditText
        android:id="@+id/invIntPPY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="number"
        android:textAlignment="textEnd" />

    <Button
        android:id="@+id/invBtnFV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fv" />

    <TextView
        android:id="@+id/invCurFV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd" />

    <Button
        android:id="@+id/invBtnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

</GridLayout>
