<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white"
	android:clickable="true"
	tools:context="edu.byui.cit360.calculators.ShoeSize">

	<EditText
		android:id="@+id/ohmDecVolt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:ems="5"
		android:inputType="numberDecimal"
		android:textAlignment="center" />

	<EditText
		android:id="@+id/ohmDecCur"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/ohmDecVolt"
		android:layout_toEndOf="@+id/ohmLblEqual"
		android:ems="5"
		android:inputType="numberDecimal"
		android:textAlignment="center" />

	<EditText
		android:id="@+id/ohmDecResist"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/ohmDecVolt"
		android:layout_toEndOf="@+id/ohmDecCur"
		android:ems="5"
		android:inputType="numberDecimal"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/ohmLblVolt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignEnd="@+id/ohmDecVolt"
		android:layout_alignStart="@+id/ohmDecVolt"
		android:layout_below="@+id/ohmDecVolt"
		android:labelFor="@+id/ohmDecVolt"
		android:text="@string/ohmsVoltage"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/ohmLblEqual"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/ohmLblVolt"
		android:layout_toEndOf="@+id/ohmLblVolt"
		android:text="@string/equal" />

	<TextView
		android:id="@+id/ohmLblCur"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/ohmLblVolt"
		android:layout_alignEnd="@+id/ohmDecCur"
		android:layout_alignStart="@+id/ohmDecCur"
		android:labelFor="@+id/ohmDecCur"
		android:text="@string/ohmsCurrent"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/ohmLblResist"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/ohmLblVolt"
		android:layout_alignEnd="@+id/ohmDecResist"
		android:layout_alignStart="@+id/ohmDecResist"
		android:labelFor="@+id/ohmDecResist"
		android:text="@string/ohmsResistance"
		android:textAlignment="center" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/ohmLblVolt"
		android:layout_alignStart="@+id/ohmDecVolt"
		android:layout_alignEnd="@+id/ohmDecResist"
		android:orientation="horizontal"
		android:gravity="center">

		<Button
			android:id="@+id/ohmBtnCompute"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/compute" />

		<Button
			android:id="@+id/ohmBtnClear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/clear" />
	</LinearLayout>

</RelativeLayout>
