<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="edu.byui.cit360.calculators.DistPerVol">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/decBegin"
            android:text="@string/begin" />

        <EditText
            android:id="@+id/decBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/lblEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:labelFor="@+id/decEnd"
            android:text="@string/end" />

        <EditText
            android:id="@+id/decEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/decDist"
            android:text="@string/dist" />

        <EditText
            android:id="@+id/decDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblVol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/decVol"
            android:text="@string/vol" />

        <EditText
            android:id="@+id/decVol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCompute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distPerVol" />

        <TextView
            android:id="@+id/numDistPerVol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

</LinearLayout>